# Mini-Language-Parser

./: .gitignore  GRAMMAR.md  Makefile  README.md  README_OLD.md  demo_ast.py  demo_final.py  demo_improvements.py  lexer.py  main.py  parser.py  pyproject.toml  requirements.txt  setup.py  test_cases.py  test_improvements.py  test_robustness.py  实验报告.md
.kiro/steering/: chinese-language.md
data/: enhanced_example1.txt  enhanced_example2.txt  error_example2.txt  test_assignment.txt  test_assignment_error.txt  test_block.txt  test_block_error.txt  test_expression.txt  test_expression_error.txt  test_if_error.txt  test_if_then.txt  test_while.txt  test_while_error.txt
docs/: IMPROVEMENTS.md  PROJECT_STRUCTURE.md  QUICK_START.md  TEST_COVERAGE.md  TEST_QUICK_REFERENCE.md
examples/: correct_example1.txt  correct_example2.txt  correct_example3.txt  error_example1.txt
src/: __init__.py  ast_nodes.py  interpreter.py  lexer.py  parser.py  parser_ast.py  semantic_analyzer.py  symbol_table.py
tests/: __init__.py  test_cases.py  test_parser_comprehensive.py
